[package]
name = "extrablatt"
version = "0.1.1"
license = "MIT OR Apache-2.0"
authors = ["Matthias Seitz <matthias.seitz@tum.de>"]
edition = "2018"
repository = "https://github.com/mattsse/extrablatt"
categories = ["parsing"]
keywords = ["parser", "web", "news"]
description = "News, articles and text scraper"
documentation = "https://docs.rs/extrablatt/"

[[bin]]
name = "extrablatt"
path = "src/main.rs"
required-features = ["cli"]


[dependencies]
structopt = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
select = "0.6.0"
anyhow = "1.0"
log = "0.4"
thiserror = "1.0"
reqwest = "0.11.18"
archiveis = { version = "0.4", optional = true }
regex = "1.3"
rss = { version = "2.0.4", optional = true }
lazy_static = "1.4"
chrono = "0.4"
dtparse = "1.1"
wasm-timer = "0.2"
fnv = "1.0"
url = "2.1"
bytes = "1.4.0"
futures = "0.3"
tokio = { version = "1.29.1", features = ["macros", "fs"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.29.1", features = ["macros"] }

[features]
default = ["stopwords"]
cli = ["structopt", "serde0", "serde_json", "tokio"]
archive = ["archiveis"]
serde0 = ["serde", "url/serde", "chrono/serde"]
stopwords = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
chrono = { version = "0.4", features = ["wasmbind"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"


[workspace]
members = ["extrablatt-web"]


[profile.release]
opt-level = "s"
